# ImageScaler

./: CMakeLists.txt  LICENSE  README.md  image.cpp  image.h  main.cpp
